---
source: tests/semantics_tests.rs
expression: json
---
{
  "items": [
    {
      "Class": {
        "name": "Persona",
        "type_params": [],
        "implements": [],
        "members": [
          {
            "Field": {
              "name": "nombre",
              "visibility": "Public",
              "type_ref": {
                "Simple": "string"
              },
              "init": null,
              "is_optional": false
            }
          },
          {
            "Field": {
              "name": "_dni",
              "visibility": "Private",
              "type_ref": {
                "Simple": "string"
              },
              "init": null,
              "is_optional": false
            }
          },
          {
            "Method": {
              "name": "getNombre",
              "visibility": "Public",
              "type_params": [],
              "params": [],
              "return_type": {
                "Simple": "string"
              },
              "body": {
                "stmts": [
                  {
                    "Return": {
                      "expr": {
                        "Member": {
                          "object": {
                            "Identifier": "this"
                          },
                          "property": "nombre"
                        }
                      }
                    }
                  }
                ]
              },
              "expr_body": {
                "Member": {
                  "object": {
                    "Identifier": "this"
                  },
                  "property": "nombre"
                }
              },
              "is_async_inferred": false,
              "contains_fail": false
            }
          },
          {
            "Method": {
              "name": "_getDni",
              "visibility": "Private",
              "type_params": [],
              "params": [],
              "return_type": {
                "Simple": "string"
              },
              "body": {
                "stmts": [
                  {
                    "Return": {
                      "expr": {
                        "Member": {
                          "object": {
                            "Identifier": "this"
                          },
                          "property": "_dni"
                        }
                      }
                    }
                  }
                ]
              },
              "expr_body": null,
              "is_async_inferred": false,
              "contains_fail": false
            }
          }
        ],
        "needs_serde": false,
        "is_data": false
      }
    },
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "p"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "Persona"
                    },
                    "args": [],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "nombre"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "MethodCall": {
                    "object": {
                      "Identifier": "p"
                    },
                    "method": "getNombre",
                    "args": [],
                    "adapter": "seq",
                    "adapter_options": {}
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
